--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -50,6 +50,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:lines="2"
+            android:onClick="makeGuess"
             tools:text="Choice"/>
 
         <Button
@@ -59,6 +60,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:lines="2"
+            android:onClick="makeGuess"
             tools:text="Choice"/>
 
     </LinearLayout>
@@ -75,6 +77,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:lines="2"
+            android:onClick="makeGuess"
             tools:text="Choice"/>
 
         <Button
@@ -84,6 +87,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:lines="2"
+            android:onClick="makeGuess"
             tools:text="Choice"/>
 
     </LinearLayout>
